@@ -67,6 +67,7 @@ Other contributors:
   David A. Wheeler <dwheeler@dwheeler.com>
   David Boyce <dsb@boyski.com>
   Frank Heckenbach <f.heckenbach@fh-soft.de>
+  Kaz Kylheku <kaz@kylheku.com>
 
 With suggestions/comments/bug reports from a cast of ... well ...
 hundreds, anyway :)
