@@ -1315,6 +1315,7 @@ main (int argc, char **argv, char **envp)
   {
     const char *features = "target-specific order-only second-expansion"
                            " else-if shortest-stem undefine oneshell nocomment"
+                           " grouped-target"
 #ifndef NO_ARCHIVES
                            " archives"
 #endif
